# oc-accel

./: .gitignore  .gitmodules  404.html  ActionTypes.md  BugReporting.md  CMakeLists.txt  Jenkinsfile  Makefile  README.md  check_ocse.sh  check_platform.sh  debug_timing  display_traces  extra.css  extra.js  index.html  oc_debug_timing  ocaccel_env  ocaccel_env.sh  ocaccel_path.sh  params.json  run.py  setup_tools.ksh  sitemap.xml  snap_env  snap_path.sh
actions/: CMakeLists.txt  Makefile  README.md  hls.mk  software.mk
actions-doc/hdl-example/: index.html
actions-doc/hdl-helloworld/: index.html
actions-doc/hdl_example/: index.html
actions-doc/hdl_single_engine/: index.html
actions-doc/hls-helloworld/: index.html
actions-doc/hls-memcopy/: index.html
actions-doc/hls_helloworld/: index.html
actions-doc/hls_memcopy_1024/: index.html
actions/hdl_database/: Makefile
actions/hdl_example/: README.md
actions/hdl_multi_process/: Makefile
actions/hdl_nvdla/: Makefile  README.md
actions/hdl_single_engine/: README.md
actions/hls_decimal_mult/: README.md
actions/hls_hbm_memcopy_1024/: README.md
actions/hls_helloworld/: README.md
actions/hls_helloworld_1024/: README.md
actions/hls_helloworld_512/: README.md
actions/hls_helloworld_python/: README.md
actions/hls_image_filter/: README.md
actions/hls_memcopy_1024/: README.md
actions/hls_memcopy_512/: README.md
actions/hls_mmult_python/: README.md
actions/hls_rx100G/: README.md
actions/hls_udp_512/: Makefile  README.md
actions/hls_vadd/sw/: CMakeLists.txt  Makefile  hls_vadd.c  hls_vadd.cpp  hls_vadd_register_layout.h
actions/hls_vadd_matmul/sw/: CMakeLists.txt  Makefile  hls_matmul_register_layout.h  hls_vadd_matmul.cpp  hls_vadd_register_layout.h
actions/include/: hls_minibuf.H  hls_ocaccel.H  hls_ocaccel_1024.H  hls_snap.H  hls_snap_1024.H
actions/scripts/: create_run_hls_script.sh  oc_jenkins.sh  testlist_simple.sh
deep-dive/board-package/: index.html
deep-dive/hardware-logic/: index.html
deep-dive/libosnap/: index.html
deep-dive/registers/: index.html
deep-dive/snap_core/: index.html
deep-dive/software-api/: index.html
defconfig/: AD9H3.hdl_single_engine.defconfig  AD9H3.hls_helloworld.defconfig  AD9H7.hdl_database.4_eng.64x1_regex.no_flash.defconfig  AD9H7.hdl_database.defconfig  AD9H7.hdl_nvdla.defconfig  AD9H7.hls_helloworld.defconfig  AD9V3.hdl_example.BRAM.defconfig  AD9V3.hdl_example.NORAM.defconfig  AD9V3.hdl_example.SDRAM.defconfig  AD9V3.hdl_single_engine.defconfig  AD9V3.hls_helloworld.defconfig  AD9V3.hls_memcopy_1024.defconfig  OC-AD9H3.hdl_example.BRAM.defconfig  OC-AD9H3.hdl_example.NORAM.defconfig  OC-AD9H3.hdl_example.defconfig  OC-AD9H3.hdl_multi_process.ILA.FLASH.deconfig  OC-AD9H3.hdl_single_engine.defconfig  OC-AD9H3.hls_decimal_mult.defconfig  OC-AD9H3.hls_hbm_memcopy_1024.defconfig  OC-AD9H3.hls_helloworld.defconfig  OC-AD9H3.hls_helloworld_1024.defconfig  OC-AD9H3.hls_helloworld_512.defconfig  OC-AD9H3.hls_image_filter.defconfig  OC-AD9H3.hls_memcopy_1024.defconfig  OC-AD9H3.hls_udp_512.defconfig  OC-AD9H335.hdl_example.defconfig  OC-AD9H335.hdl_single_engine.defconfig  OC-AD9H335.hls_decimal_mult.defconfig  OC-AD9H335.hls_hbm_memcopy_1024.defconfig  OC-AD9H335.hls_helloworld_1024.defconfig  OC-AD9H335.hls_helloworld_512.defconfig  OC-AD9H335.hls_helloworld_python.defconfig  OC-AD9H335.hls_image_filter.defconfig  OC-AD9H335.hls_memcopy_1024.defconfig  OC-AD9H335.hls_udp_512.defconfig  OC-AD9H7.hdl_database.4_eng.64x1_regex.no_flash.defconfig  OC-AD9H7.hdl_database.8_eng.regex.no_flash.defconfig  OC-AD9H7.hdl_example.BRAM.defconfig  OC-AD9H7.hdl_example.NORAM.defconfig  OC-AD9H7.hdl_example.defconfig  (+48 more)
hardware/: CMakeLists.txt  Makefile  README.md
hardware/config/: Kconfig  kconfig.cmake
hardware/setup/: clean_all.sh  common_funcs.tcl  cov.ccf  create_eth_100G_ip.tcl  create_framework.tcl  create_hbm.tcl  create_hbm_for_simu.tcl  create_hls_ip.tcl  create_snap_ip.tcl  (+23 more)
my-image/: index.html
my-sim/: index.html
repository/: index.html
scripts/: Kconfig  Makefile  display_traces  full_regression_list  jenkins_regression.sh  jenkins_sanity_image.ksh  jenkins_sanity_sim.ksh  ocaccel_cfg  ocaccel_path.sh  odma_jenkins_regression.sh  odma_regression_list  parse_unit_sim_result.pl  regression_list  setup_tools.sh  snap_cfg
search/: search_index.json
software/: CMakeLists.txt  Makefile  README.md  config.mk
software/include/: libocaccel.h  libosnap.h  ocaccel_global_regs.h  ocaccel_hls_if.h  ocaccel_internal.h  ocaccel_job_manager.h  ocaccel_queue.h  ocaccel_tools.h  ocaccel_types.h  osnap_global_regs.h  osnap_hls_if.h  osnap_internal.h  osnap_m_regs.h  osnap_queue.h  osnap_tools.h  osnap_types.h
software/lib/: Makefile  ocaccel.c  ocaccel_job_manager.cpp  osnap.c
software/tools/: Makefile  force_cpu.c  force_cpu.h  oc_action_reprogram.c  oc_find_card  oc_maint.c  ocaccel_actions.h  ocaccel_find_card  ocaccel_maint.c  ocaccel_peek.c  ocaccel_poke.c  simple_reg_access.c  simple_reg_access.sh  snap_actions.h  snap_maint.c  snap_peek.c  snap_peek_function.c  snap_poke.c  soft_program_compile  soft_reload.sh  soft_reset.sh  soft_reset_action.sh
software/tools/include/: program_common_defs.h  program_common_funcs.h  program_global_vars.h
software/tools/src/: ConfigSpace_PR_program_main.c  README.md  program_common_funcs.c  program_global_vars.c  snap_peek_function.c  soft_program_main.c
web-doc/: mkdocs.yml
(+743 files in other folders)
